# llm_engineering_platform

./: .env_template  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  README.md  README_zh.md  create_project_structure.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  struct_file.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  base_agent.py  data_agent.py  evaluation_agent.py  intent_agent.py  report_agent.py  task_planner_agent.py
app/api/: __init__.py  deps.py  schemas.py
app/api/endpoints/: __init__.py  assessment.py
app/api/v1/: schemas.py
app/api/v1/endpoints/: prompt.py  tasks.py
app/communication/: __init__.py  message_bus.py
app/communication/protocols/: __init__.py  mcp_schemas.py
app/core/: __init__.py  agent_registry.py  orchestrator.py
app/evaluation/: __init__.py  metrics.py
app/knowledge_base/: __init__.py  retriever.py
app/knowledge_base/connectors/: __init__.py  base_connector.py  gitee_connector.py  github_connector.py  osv_connector.py  web_search_connector.py
app/knowledge_base/graph_store/: __init__.py  graph_utils.py  neo4j_client.py
app/knowledge_base/vector_store/: __init__.py  faiss_client.py
app/models/: __init__.py  common.py  intent.py  project_data.py  report.py  task.py
app/prompts/: __init__.py  prompt_manager.py
app/prompts/templates/: intent_agent.md  report_agent.md  task_planner_agent.md
app/prompts/templates/evaluation_agent/: developer_activity.md
app/reporting/: __init__.py  generator.py  visualizations.py
app/utils/: __init__.py  http_client.py  llm_clients.py
app/ws/: connections.py
scripts/: config.yaml  load_data.py  run_dev.sh  start_qwen_server.py
src/agents/: base_agent.py  factory.py  specific_graph_agents.py
src/config/: agents.py  configuration.py  settings.py
src/knowledge_base/: loaders.py  retrievers.py  schemas_registry.py
src/llms/: llm.py
src/models/: agent_io.py  common.py  knowledge.py
src/orchestrator/: graph_manager.py
src/prompts/: __init__.py  example_prompt.md  prompts.py
src/tools/: base_tool.py  specific_tool_A.py
src/utils/: helper.py
tests/integration/: test_end_to_end.py
tests/unit/src/agents/: test_factory.py
tests/unit/src/prompts/: test_prompts.py
