[project]
name = "llm-engineering-platform-v2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "llama-index>=0.12.37",
    "qwen-agent[code-interpreter,gui,mcp,rag]>=0.0.11",
    "setuptools>=80.8.0",
    "vllm>=0.8.5.post1",
]
